# earningsfeed-cli

./: Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: release.yml
choco/: earningsfeed.nuspec
choco/tools/: chocolateyInstall.ps1  chocolateyUninstall.ps1
wix/: main.wxs
