[package]
name = "earningsfeed-cli"
version = "0.1.8"
edition = "2021"
authors = ["Earnings Feed <support@earningsfeed.com>"]
description = "CLI for the EarningsFeed API - SEC filings, insider transactions, and institutional holdings"
license = "MIT"
repository = "https://github.com/earningsfeed/earningsfeed-cli"
homepage = "https://earningsfeed.com"
documentation = "https://earningsfeed.com/api/docs"
keywords = ["sec", "filings", "insider", "stocks", "cli"]
categories = ["command-line-utilities", "finance"]

[package.metadata.wix]
upgrade-guid = "08729A13-94D3-48A8-A2C1-9E81C5F3D5C2"
path-guid = "81CE00B5-8D21-488B-886D-78E7178CDC9B"
license = false
eula = false

[[bin]]
name = "earningsfeed"
path = "src/main.rs"

[dependencies]
earningsfeed = "0.1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
confy = "0.6"
thiserror = "2"

[profile.release]
lto = true
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
